Bug 165873 - Kontact crashes when I edit an e-mail, toggle auto-spellcheck and click on the text
Summary: Kontact crashes when I edit an e-mail, toggle auto-spellcheck and click on th...
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 168290 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-06 18:16 UTC by auxsvr
Modified: 2008-08-05 12:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description auxsvr 2008-07-06 18:16:50 UTC
Version:           4.00.85 (using Devel)
Installed from:    Compiled sources
Compiler:          gcc (SUSE Linux) 4.3.1 20080507 (prerelease) [gcc-4_3-branch revision 135036] 
OS:                Linux

Application: Kontact (kontact), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[New Thread 0xb51d36d0 (LWP 5552)]
[New Thread 0xb00a1b90 (LWP 6604)]
[New Thread 0xb0f04b90 (LWP 5596)]
[KCrash handler]
#6  0xb7278bcc in Sonnet::Highlighter::isWordMisspelled (this=0x0, 
    word=@0xbfed38d4)
    at /usr/src/debug/kdelibs-4.0.85/kdeui/sonnet/highlighter.cpp:434
#7  0xb7ef4e7d in KPIM::KMeditor::contextMenuEvent (this=0x8ae11e0, 
    event=0xbfed3e30)
    at /usr/src/debug/kdepim-4.0.85/libkdepim/kmeditor.cpp:553
#8  0xb5b8867f in QWidget::event (this=0x8ae11e0, event=0xbfed3e30)
    at kernel/qwidget.cpp:7083
#9  0xb5e71b53 in QFrame::event (this=0x8ae11e0, e=0xbfed3e30)
    at widgets/qframe.cpp:657
#10 0xb5efb8ef in QAbstractScrollArea::viewportEvent (this=0x8ae11e0, 
    e=0x8ae11e0) at widgets/qabstractscrollarea.cpp:941
#11 0xb5efdcf5 in QAbstractScrollAreaFilter::eventFilter (this=0x8aee9f0, 
    o=0x9429fa8, e=0xbfed3e30) at widgets/qabstractscrollarea_p.h:102
#12 0xb6bafd4a in QCoreApplicationPrivate::sendThroughObjectEventFilters (
    this=0x80635e0, receiver=0x9429fa8, event=0xbfed3e30)
    at kernel/qcoreapplication.cpp:694
#13 0xb5b35eaa in QApplicationPrivate::notify_helper (this=0x80635e0, 
    receiver=0x9429fa8, e=0xbfed3e30) at kernel/qapplication.cpp:3768
#14 0xb5b3d281 in QApplication::notify (this=0xbfed4548, receiver=0x9429fa8, 
    e=0xbfed3e30) at kernel/qapplication.cpp:3586
#15 0xb721e5dd in KApplication::notify (this=0xbfed4548, receiver=0x9429fa8, 
    event=0xbfed3e30)
    at /usr/src/debug/kdelibs-4.0.85/kdeui/kernel/kapplication.cpp:311
#16 0xb6bb0b51 in QCoreApplication::notifyInternal (this=0xbfed4548, 
    receiver=0x9429fa8, event=0xbfed3e30) at kernel/qcoreapplication.cpp:583
#17 0xb5b3fb3e in QCoreApplication::sendSpontaneousEvent (receiver=0x9429fa8, 
    event=0x8ae11e0)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#18 0xb5b9b9f1 in QETWidget::translateMouseEvent (this=0x915b4b0, 
    event=0xbfed43bc) at kernel/qapplication_x11.cpp:4137
#19 0xb5b9a5a4 in QApplication::x11ProcessEvent (this=0xbfed4548, 
    event=0xbfed43bc) at kernel/qapplication_x11.cpp:3131
#20 0xb5bc03ae in QEventDispatcherX11::processEvents (this=0x805e2b8, flags=
      {i = -1074969512}) at kernel/qeventdispatcher_x11.cpp:134
#21 0xb6baf2ca in QEventLoop::processEvents (this=0xbfed44c0, flags=
      {i = -1074969448}) at kernel/qeventloop.cpp:149
#22 0xb6baf48a in QEventLoop::exec (this=0xbfed44c0, flags={i = -1074969400})
    at kernel/qeventloop.cpp:196
#23 0xb6bb166d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#24 0xb5b35d47 in QApplication::exec () at kernel/qapplication.cpp:3304
#25 0x0804c113 in main (argc=1, argv=0xbfed4844)
    at /usr/src/debug/kdepim-4.0.85/kontact/src/main.cpp:210
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Thomas McGuire 2008-07-06 21:20:42 UTC
SVN commit 828841 by tmcguire:

Don't display the context menu for misspelled words when spell checking is disabled.

This should also fix bug 165873 (although I couldn't reproduce it)

BUG: 165873


 M  +2 -1      kmeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=828841
Comment 2 auxsvr 2008-07-06 22:27:12 UTC
That was fast, thanks!
Comment 3 Thomas McGuire 2008-08-05 12:20:09 UTC
*** Bug 168290 has been marked as a duplicate of this bug. ***
Comment 4 Thomas McGuire 2008-08-05 12:24:20 UTC
SVN commit 842439 by tmcguire:

Also don't crash when spell checking is disabled with the context menu (which actually
disables the complete highlighter).
CCBUG: 165873


 M  +1 -0      kmeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842439
Comment 5 Thomas McGuire 2008-08-05 12:27:03 UTC
SVN commit 842441 by tmcguire:

Backport r842439 by tmcguire to the 4.1 branch:

Also don't crash when spell checking is disabled with the context menu (which actually
disables the complete highlighter).
CCBUG: 165873



 M  +1 -0      kmeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842441