Don't display the context menu for misspelled words when spell checking is disabled.

This should also fix bug 165873 (although I couldn't reproduce it)

BUG: 165873

svn path=/trunk/KDE/kdepim/libkdepim/; revision=828841